--- a/projeto/labeddit/package.json
+++ b/projeto/labeddit/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "projetolabex",
+  "name": "labeddit",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,9 +11,9 @@
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
-    "styled-components": "^5.3.0",
+    "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
